--- a/tests/artifacts/pcb_holder-test.conf
+++ b/tests/artifacts/pcb_holder-test.conf
@@ -62,20 +62,23 @@ TAB_Verbs="
 # "
 
 TAB_TEST="
-/* [PCB Holder]*/
-ENGINE  = \"by holes\"; // [by holes, by size]
-H   = 4;  // [0.1:0.1:10]
-// frame thickness on Z axis
-FRAME_T  = 0; // [0:0.1:5]
-TOLERANCE = 0.5;  // [0:0.1:1]
-// thickness along ±Z semi axes
-Tz = [0,0];  // [0:0.1:10]
+/* [Constructor]*/
+H_MIN = 4;  // [0.1:0.1:10]
 // knurl nut
-KNUT  = false;
-// FL_LAYOUT directions in floating semi-axis list
-LAYOUT_DIRS  = [\"±z\"];
+KNUT  = \"none\";  // [none,linear,spiral]
+PCB   = \"Perfboard 80 x 20mm\";  //  [\"HiLetgo SX1308 DC-DC Step up power module\", \"ORICO 4 Ports USB 3.0 Hub 5 Gbps with external power supply port\", \"Perfboard 70 x 50mm\", \"Perfboard 60 x 40mm\", \"Perfboard 70 x 30mm\", \"Perfboard 80 x 20mm\", \"RPI4-MODBP-8GB\", \"Raspberry PI uHAT\", \"KHADAS-SBC-VIM1\"]
 
-PCB         = \"FL_PCB_PERF80x20\";  // [FL_PCB_HILETGO_SX1308, FL_PCB_RPI_uHAT, FL_PCB_RPI4, FL_PCB_PERF70x50, FL_PCB_PERF60x40, FL_PCB_PERF70x30, FL_PCB_PERF80x20, FL_PCB_MH4PU_P]
+/* [Engine] */
+// no fillet if zero
+FILLET  = .5;  // [0:0.1:5]
+// when true also PCB will be shown during FL_ASSEMBLY
+ASSEMBLY_ALL  = false;
+// thickness on +Z axis
+THICK_POSITIVE = 1.6;      // [0:0.1:10]
+// thickness on -Z axis
+THICK_NEGATIVE = 2.5;      // [0:0.1:10]
+// FL_LAYOUT directions
+LAYOUT_DIRS  = \"±z\";  // [±z, -z, +z]
 "
 
 # TEST_PROLOGUE="
@@ -87,41 +90,37 @@ PCB         = \"FL_PCB_PERF80x20\";  // [FL_PCB_HILETGO_SX1308, FL_PCB_RPI_uHAT,
 # "
 
 TEST_CODE="
-verbs=[
-  if (\$FL_ADD!=\"OFF\")       FL_ADD,
-  if (\$FL_ASSEMBLY!=\"OFF\")  FL_ASSEMBLY,
-  if (\$FL_AXES!=\"OFF\")      FL_AXES,
-  if (\$FL_BBOX!=\"OFF\")      FL_BBOX,
-  if (\$FL_DRILL!=\"OFF\")     FL_DRILL,
-  if (\$FL_LAYOUT!=\"OFF\")    FL_LAYOUT,
-  if (\$FL_MOUNT!=\"OFF\")     FL_MOUNT,
-  if (\$FL_PAYLOAD!=\"OFF\")   FL_PAYLOAD,
-];
-pcb = PCB==\"FL_PCB_RPI4\"      ? FL_PCB_RPI4
-    : PCB==\"FL_PCB_PERF70x50\" ? FL_PCB_PERF70x50
-    : PCB==\"FL_PCB_PERF60x40\" ? FL_PCB_PERF60x40
-    : PCB==\"FL_PCB_PERF70x30\" ? FL_PCB_PERF70x30
-    : PCB==\"FL_PCB_PERF80x20\" ? FL_PCB_PERF80x20
-    : PCB==\"FL_PCB_MH4PU_P\"   ? FL_PCB_MH4PU_P
-    : PCB==\"FL_PCB_RPI_uHAT\"  ? FL_PCB_RPI_uHAT
-    : PCB==\"FL_PCB_HILETGO_SX1308\"  ? FL_PCB_HILETGO_SX1308
-    : undef;
+verbs=fl_verbList([
+    FL_ADD,
+    FL_ASSEMBLY,
+    FL_AXES,
+    FL_BBOX,
+    FL_DRILL,
+    FL_LAYOUT,
+    FL_MOUNT,
+    FL_PAYLOAD,
+  ]
+);
+thickness = let(t= [
+  if (THICK_NEGATIVE) -THICK_NEGATIVE,
+  if (THICK_POSITIVE) +THICK_POSITIVE
+]) t ? t : undef;
 
-dirs  = fl_3d_AxisList(LAYOUT_DIRS);
-thick = [[0,0],[0,0],Tz];
+pcb     = fl_pcb_select(PCB);
+pcb_scr = fl_screw(pcb);
+dirs    = fl_3d_AxisList([LAYOUT_DIRS]);
+thread  = KNUT!="none" ? KNUT : undef;
+pcbh    = fl_PCBHolder(pcb,h_min=H_MIN,knut_type=thread);
 
-// screw   = SCREW==\"M2\" ? M2_cap_screw : M3_cap_screw;
-
-// frame = FRAME_H && FRAME_T ? [FRAME_H,FRAME_T] : undef;
-// holder  = ENGINE==\"by holes\" ? fl_pcb_HolderByHoles(pcb,H) : fl_pcb_HolderBySize(pcb,H,TOLERANCE);
-
-// fl_pcb_holder(verbs,holder,direction=direction,octant=octant,frame=frame,thick=T,knut=KNUT)
-//   fl_screw(type=\$hole_screw,thick=H+fl_pcb_thick(pcb)+T);
-
-if (ENGINE==\"by holes\")
-  fl_pcb_holderByHoles(verbs,pcb,H,knut=KNUT,frame=FRAME_T,thick=thick,lay_direction=dirs,direction=direction,octant=octant)
-      fl_screw(FL_DRAW,type=\$hld_screw,thick=\$hld_h+fl_pcb_thick(\$hld_pcb)+\$hld_thick.z[0]+\$hld_thick.z[1],washer=\"nylon\",nut=\"default\",nwasher=\"nylon\",direction=[\$spc_director,0]);
-else
-  fl_pcb_holderBySize(verbs,pcb,H,knut=KNUT,frame=FRAME_T,thick=thick,lay_direction=dirs,tolerance=TOLERANCE,direction=direction,octant=octant)
-    fl_screw(FL_DRAW,type=\$hld_screw,thick=\$hld_h+\$hld_thick.z[0]+\$hld_thick.z[1],washer=\"nylon\",nut=\"default\",nwasher=\"nylon\",direction=[\$spc_director,0]);
+fl_pcbHolder(verbs,pcbh,thick=thickness,lay_direction=dirs,fillet=FILLET,asm_all=ASSEMBLY_ALL,direction=direction,octant=octant)
+  if ($pcbh_verb==FL_LAYOUT) {
+    translate($spc_director*($spc_thick))
+      let(l=1.5*fl_spc_d($pcbh_spacer))
+        fl_cube(size=[l,l,$spc_thick],octant=-$spc_director,$FL_ADD=$FL_LAYOUT);
+  } else if ($pcbh_verb==FL_MOUNT)
+    let(
+      htyp    = screw_head_type($pcbh_screw),
+      washer  = (htyp==hs_cs||htyp==hs_cs_cap) ? "no" : "nylon"
+    ) fl_screw(FL_DRAW,$pcbh_screw,thick=$spc_thickness,washer=washer,$FL_ADD=$FL_MOUNT,$FL_ASSEMBLY=$FL_MOUNT);
+  else echo($pcbh_verb=$pcbh_verb);
 "
