--- a/tests/artifacts/pcb_holder-test.conf
+++ b/tests/artifacts/pcb_holder-test.conf
@@ -109,18 +109,18 @@ thickness = let(t= [
 pcb     = fl_pcb_select(PCB);
 pcb_scr = fl_screw(pcb);
 dirs    = fl_3d_AxisList([LAYOUT_DIRS]);
-thread  = KNUT!="none" ? KNUT : undef;
+thread  = KNUT!=\"none\" ? KNUT : undef;
 pcbh    = fl_PCBHolder(pcb,h_min=H_MIN,knut_type=thread);
 
 fl_pcbHolder(verbs,pcbh,thick=thickness,lay_direction=dirs,fillet=FILLET,asm_all=ASSEMBLY_ALL,direction=direction,octant=octant)
-  if ($pcbh_verb==FL_LAYOUT) {
-    translate($spc_director*($spc_thick))
-      let(l=1.5*fl_spc_d($pcbh_spacer))
-        fl_cube(size=[l,l,$spc_thick],octant=-$spc_director,$FL_ADD=$FL_LAYOUT);
-  } else if ($pcbh_verb==FL_MOUNT)
+  if (\$pcbh_verb==FL_LAYOUT) {
+    translate(\$spc_director*(\$spc_thick))
+      let(l=1.5*fl_spc_d(\$pcbh_spacer))
+        fl_cube(size=[l,l,\$spc_thick],octant=-\$spc_director,\$FL_ADD=\$FL_LAYOUT);
+  } else if (\$pcbh_verb==FL_MOUNT)
     let(
-      htyp    = screw_head_type($pcbh_screw),
-      washer  = (htyp==hs_cs||htyp==hs_cs_cap) ? "no" : "nylon"
-    ) fl_screw(FL_DRAW,$pcbh_screw,thick=$spc_thickness,washer=washer,$FL_ADD=$FL_MOUNT,$FL_ASSEMBLY=$FL_MOUNT);
-  else echo($pcbh_verb=$pcbh_verb);
+      htyp    = screw_head_type(\$pcbh_screw),
+      washer  = (htyp==hs_cs||htyp==hs_cs_cap) ? \"no\" : \"nylon\"
+    ) fl_screw(FL_DRAW,\$pcbh_screw,thick=\$spc_thickness,washer=washer,\$FL_ADD=\$FL_MOUNT,\$FL_ASSEMBLY=\$FL_MOUNT);
+  else echo(\$pcbh_verb=\$pcbh_verb);
 "
