--- a/tests/artifacts/box-test.conf
+++ b/tests/artifacts/box-test.conf
@@ -79,7 +79,7 @@ THICK           = 2.5;
 // fold internal radius (square if undef)
 RADIUS          = 1.1;
 
-TOLERANCE       = 0.3;
+TOLERANCE       = 0.3;  // [0:0.1:1]
 // upper side color
 MATERIAL_UPPER  = \"DodgerBlue\"; // [DodgerBlue,Blue,OrangeRed,SteelBlue]
 // lower side color
@@ -90,6 +90,13 @@ FILLET          = true;
 
 LAY_NATIVE  = true;
 LAY_OCTANT  = [0,0,0];  // [-1:+1]
+
+/* [Fixings] */
+
+// Knurl nut thread type
+FAST_TYPE  = \"linear\"; // [linear,spiral]
+// Knurl nut screw nominal ⌀
+FAST_NOMINAL = 3;  // [2,3,4,5,6,8]
 "
 
 # TEST_PROLOGUE="
@@ -125,6 +132,7 @@ fl_box(verbs,
   tolerance=TOLERANCE,
   fillet=FILLET,
   lay_octant=lay_octant,
+  fastenings=[FAST_TYPE,FAST_NOMINAL],
   octant=octant,direction=direction
 )
   fl_sphere(FL_AXES,r=10,\$FL_AXES=\"ON\");
