--- a/tests/artifacts/spacer-test.conf
+++ b/tests/artifacts/spacer-test.conf
@@ -29,7 +29,7 @@ TAB_Verbs="
 // adds shapes to scene.
 \$FL_ADD       = \"ON\";   // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // layout of predefined auxiliary shapes (like predefined screws)
-\$FL_ASSEMBLY  = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+\$FL_ASSEMBLY  = \"ON\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // adds local reference axes
 \$FL_AXES      = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // adds a bounding box containing the object
@@ -86,9 +86,6 @@ ANCHOR_Z_NEG  = true;
 THICK_POSITIVE = 1.6;      // [0:0.1:10]
 // thickness on -Z axis
 THICK_NEGATIVE = 2.5;      // [0:0.1:10]
-
-// FL_LAYOUT directions
-LAYOUT_DIRS  = \"±z\";  // [±z, -z, +z]
 "
 
 # TEST_PROLOGUE="
@@ -130,10 +127,9 @@ knut          = KNUT_TYPE!=\"none\" ? assert(scr_size,\"***TEST ERROR***: specif
 assert(KNUT_TYPE==\"none\"||knut,str(\"***TEST ERROR***: no M\",SCREW_SIZE,\" \",KNUT_TYPE,\" knurl nut found in inventory\"));
 cs            = let(d=knut?fl_nominal(knut):screw?fl_screw_nominal(screw):undef)
                 d ? fl_cs_search(d=d)[0] : undef;
-dirs          = fl_3d_AxisList([LAYOUT_DIRS]);
 
 spacer = fl_Spacer(h_min=H_MIN,d_min=D_MIN,screw_size=scr_size,knut=knut);
-fl_spacer(verbs,spacer,thick=thickness,lay_direction=dirs,anchor=anchor,fillet=FILLET,octant=octant,direction=direction)
+fl_spacer(verbs,spacer,thick=thickness,anchor=anchor,fillet=FILLET,octant=octant,direction=direction)
   if (\$spc_verb==FL_LAYOUT)
     /*
      * CHILDREN LAYOUT: by default spacers layout children on the top of the ±Z
