--- a/docs/foundation/800x600/Makefile
+++ b/docs/foundation/800x600/Makefile
@@ -8,7 +8,12 @@ SIZE		:= $(notdir $(CURDIR))
 FOUNDATION	:= $(LIB_ROOT)/foundation
 PICTURES	:= pic-0.png pic-1.png pic-2.png pic-3.png pic-4.png pic-5.png pic-6.png pic-7.png pic-8.png pic-9.png torus.png
 
+include $(FUNCTIONS)
+
 # include $(pics:.png=.deps)
+
+top:
+	@$(MAKE) -C $(realpath ../../..) docs/foundation/800x600/all
 
 all:	$(PICTURES)
 
