--- a/docs/foundation/Makefile
+++ b/docs/foundation/Makefile
@@ -4,15 +4,22 @@
 # %.png: %.scad
 # 	openscad -m make -o $@ -d $@.deps $<
 
-.PHONY: all
+# .PHONY: all
 
-all: dependencies.svg
-	@$(MAKE) -C 800x600 $@
+include $(FUNCTIONS)
+
+top:
+	@$(MAKE) -C $(realpath ../..) docs/foundation/all
+
+all: dependencies.svg 800x600/all
 
 dependencies.svg: $(FOUNDATION_SOURCES)
 	@echo -n -e "\e[33m$(CURDIR)/$@\e[0m: "
 	@$(DEPS) --foundation
 	@echo -e "\e[32mOK\e[0m"
+
+800x600/%:
+	$(call make_sub,800x600,"OFL/docs/foundation")
 
 clean:
 	@$(MAKE) -C 800x600 $@
