--- a/docs/vitamins/Makefile
+++ b/docs/vitamins/Makefile
@@ -4,12 +4,19 @@
 # %.png: %.scad
 # 	openscad -m make -o $@ -d $@.deps $<
 
-.PHONY: all
+# .PHONY: all
+
+include $(FUNCTIONS)
+
+top:
+	@$(MAKE) -C $(realpath ../..) docs/vitamins/all
 
 all: dependencies.svg
 
 dependencies.svg: $(VITAMINS_SOURCES)
+	@echo -n -e "\e[33m$(CURDIR)/$@\e[0m: "
 	@$(DEPS) --vitamins
+	@echo -e "\e[32mOK\e[0m"
 
 clean:
 	@rm -f dependencies.svg
