--- a/orthodocs/foundation/Makefile
+++ b/orthodocs/foundation/Makefile
@@ -1,5 +1,10 @@
-all:
-	@$(MAKE) -C 256x256
+top:
+	@$(MAKE) -C $(realpath ../..) orthodocs/foundation/all
+
+all: 256x256/all
+
+256x256/%:
+	$(call make_sub)
 
 clean:
 	@rm -f *.md
