--- a/orthodocs/artifacts/Makefile
+++ b/orthodocs/artifacts/Makefile
@@ -1,5 +1,12 @@
-all:
-	@$(MAKE) -C 256x256
+top:
+	@$(MAKE) -C $(realpath ../..) orthodocs/artifacts/all
+
+include $(FUNCTIONS)
+
+all: 256x256/all
+
+256x256/%:
+	$(call make_sub)
 
 clean:
 	@rm -f *.md
