fl_dict_organize() test added

--- a/tests/foundation/base_list-test.conf
+++ b/tests/foundation/base_list-test.conf
@@ -89,4 +89,68 @@ let(
     [undef    ,  4    ]
   ]
 ) assert(result==expected) echo(result=result);
+
+//**** fl_dict_organize() *****************************************************
+
+let(
+  dict = [
+    [\"first\", 7],
+    [\"second\",9],
+    [\"third\", 9],
+    [\"fourth\",2],
+    [\"fifth\", 2],
+  ],
+  result    = fl_dict_organize(dictionary=dict, range=[0:10], func=function(item) item[1]),
+  expected  = [
+    [], // 0
+    [], //  1
+    [   //  2
+      [\"fourth\", 2],
+      [\"fifth\",  2]
+    ],
+    [], // 3
+    [], // 4
+    [], // 5
+    [], // 6
+    [   // 7
+      [\"first\", 7]
+    ],
+    [], // 8
+    [   // 9
+      [\"second\", 9], [\"third\", 9]
+    ],
+    []  // 10
+  ]
+) assert(result==expected,result) echo(result=result);
+
+let(
+  dict = [
+    [fl_name(value=\"first\"),  [\"length\",  7 ]],
+    [fl_name(value=\"second\"), [\"length\", 9  ]],
+    [fl_name(value=\"third\"),  [\"length\",  9 ]],
+    [fl_name(value=\"fourth\"), [\"length\", 2  ]],
+    [fl_name(value=\"fifth\"),  [\"length\",  2 ]],
+  ],
+  result    = fl_dict_organize(dictionary=dict, range=[0:10], func=function(item) fl_property(item,\"length\")),
+  expected  = [
+    [], // length 0
+    [], // length 1
+    [   // length 2
+      [[\"name\", \"fourth\"], [\"length\", 2]],
+      [[\"name\", \"fifth\"], [\"length\", 2]]
+    ],
+    [], // length 3
+    [], // length 4
+    [], // length 5
+    [], // length 6
+    [   // length 7
+      [[\"name\", \"first\"], [\"length\", 7]]
+    ],
+    [], // length 8
+    [   // length 9
+      [[\"name\", \"second\"], [\"length\", 9]], [[\"name\", \"third\"], [\"length\", 9]]
+    ],
+    []  // length 10
+  ]
+) assert(result==expected,result) echo(result=result);
 "
