--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,17 +1,18 @@
-FROM fedora:34
+FROM fedora:37
 LABEL org.opencontainers.image.authors="Giampiero Gabbiani (giampiero@gabbiani.org)"
 
 ARG libs=/root/.local/share/OpenSCAD/libraries
+ARG nop_ver=v21.8.0
 ###############################################################################
 # system pre requisites
-RUN dnf install -y openscad git
+RUN dnf install -y openscad git which
 ###############################################################################
 # directory structure setup
-RUN mkdir -p $libs
+RUN mkdir -p ${libs}
 ###############################################################################
 # libraries pre requisites
-WORKDIR $libs
-RUN git clone https://github.com/nophead/NopSCADlib.git
+WORKDIR ${libs}
+RUN git clone https://github.com/nophead/NopSCADlib.git && cd NopSCADlib && git checkout tags/${nop_ver}
 RUN git clone https://github.com/openscad/scad-utils.git
 COPY TOUL.scad .
 ###############################################################################
