documentation cleanup fixed

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,19 +1,16 @@
-include $(FUNCTIONS)
-
-# .PHONY: 800x600 artifacts foundation vitamins
 
 top:
 	@$(MAKE) -C $(realpath ..) docs/all
 
+include $(FUNCTIONS)
+
 all: 800x600/all architecture.png artifacts/all foundation/all vitamins/all
+
+clean: 800x600/clean artifacts/clean foundation/clean vitamins/clean
+	@rm -f architecture.png
 
 800x600/%:
 	$(call make_sub,800x600,"OFL/docs")
-
-architecture.png: architecture.drawio
-	@drawio --export --format png --border 10 --output $(CURDIR)/$@ $<
-	@echo -n "$(CURDIR)/$@: "
-	@echo -e "\e[32mOK\e[0m"
 
 artifacts/%:
 	$(call make_sub,artifacts,"OFL/docs")
@@ -23,10 +20,8 @@ foundation/%:
 
 vitamins/%:
 	$(call make_sub,vitamins,"OFL/docs")
+architecture.png: architecture.drawio
+	@drawio --export --format png --border 10 --output $(CURDIR)/$@ $<
+	@echo -n "$(CURDIR)/$@: "
+	@echo -e "\e[32mOK\e[0m"
 
-clean:
-	@rm -f architecture.png
-	@$(MAKE) -C 800x600 $@
-	@$(MAKE) -C artifacts $@
-	@$(MAKE) -C foundation $@
-	@$(MAKE) -C vitamins $@
