--- a/tests/vitamins/countersinks-test.conf
+++ b/tests/vitamins/countersinks-test.conf
@@ -84,7 +84,7 @@ module label(str, scale = 0.25, valign = \"baseline\", halign = \"left\")
 dictionary = TYPE==\"ISO\"?FL_CS_ISO_DICT:FL_CS_UNI_DICT;
 verbs = fl_verbList([FL_ADD,FL_AXES,FL_BBOX]);
 if (SIZE!=\"ALL\") {
-  cs = fl_cs_search(dictionary=dictionary,d=atof(SIZE))[0];
+  cs = fl_cs_search(dictionary=dictionary,d=fl_atof(SIZE))[0];
   assert(cs,str(\"No M\",SIZE,\" \",TYPE,\" countersink found.\"))
     fl_countersink(verbs,cs,tolerance=TOLERANCE,octant=octant,direction=direction);
 } else
