conf aligned to test

--- a/tests/vitamins/knurl_nuts-test.conf
+++ b/tests/vitamins/knurl_nuts-test.conf
@@ -5,7 +5,6 @@ TEST_TEMPLATE="template-3d.scad"
 # CAMERA="--camera 0,0,0,0,0,0,7"
 
 TEST_INCLUDES="
-include <../../lib/OFL/vitamins/countersinks.scad>
 include <../../lib/OFL/vitamins/knurl_nuts.scad>
 
 use <../../lib/OFL/foundation/label.scad>
@@ -91,13 +90,11 @@ thread_type   = THREAD_TYPE!=\"ANY\" ? THREAD_TYPE : undef;
 
 if (one) {
   fl_knut(verbs,one,dri_thick=thickness,octant=octant,direction=direction) {
-    if (\$knut_verb==FL_ASSEMBLY) {
+    if (\$knut_verb==FL_ASSEMBLY) {  // SCREW ASSEMBLY
       test_screw(\$knut_obj,\$knut_thickness,\$FL_ADD=\$FL_ASSEMBLY);
-    } else if (\$knut_verb==FL_LAYOUT) {
-      translate(+Z(\$knut_thick[1]))
-        fl_countersink(type=fl_cs_search(d=\$knut_nominal)[0],octant=+Z,direction=[+Z,0],\$FL_ADD=\$FL_LAYOUT);
-      translate(-Z(\$knut_length-\$knut_thick[0]))
-        fl_countersink(type=fl_cs_search(d=\$knut_nominal)[0],octant=+Z,direction=[-Z,0],\$FL_ADD=\$FL_LAYOUT);
+    } else if (\$knut_verb==FL_LAYOUT) { // CHILDREN LAYOUT
+      let(l=2*fl_knut_r(\$knut_obj))
+        fl_cube(FL_ADD, size=[l,l,\$knut_thick],octant=\$knut_director,\$FL_ADD=\$FL_LAYOUT,\$FL_AXES=\"ON\");
     }
   }
 } else {
@@ -117,11 +114,12 @@ if (one) {
           translate(-X(7))
             fl_label(string=[\"M\",fl_nominal(row[0])],fg=\"black\",size=2,octant=O);
         // row horizontal layout
-        fl_layout(axis=+X,gap=3,types=row)
-          fl_knut(verbs,\$item,dri_thick=thickness,octant=octant,direction=direction,\$FL_LAYOUT=\$FL_ADD) {
+        \$cache=\$FL_LAYOUT;
+        fl_layout(axis=+X,gap=3,types=row,\$FL_LAYOUT=\$FL_ADD)
+          fl_knut(verbs,\$item,dri_thick=thickness,octant=octant,direction=direction,\$FL_LAYOUT=\$cache) {
             if (\$knut_verb==FL_ASSEMBLY)    // SCREW ASSEMBLY
               test_screw(\$knut_obj,\$knut_thickness);
-            else if (\$knut_verb==FL_LAYOUT) // CHILDREN LAYOUT
+            else if (\$knut_verb==FL_LAYOUT && \$knut_thick) // CHILDREN LAYOUT
               let(l=2*fl_knut_r(\$knut_obj))
                 fl_cube(FL_ADD, size=[l,l,\$knut_thick],octant=\$knut_director,\$FL_ADD=\$FL_LAYOUT,\$FL_AXES=\"ON\");
           }
