function fl_sub() renamed as fl_list_sub(), function fl_list_transform() added.

--- a/tests/foundation/base_list-test.conf
+++ b/tests/foundation/base_list-test.conf
@@ -153,4 +153,14 @@ let(
     []  // length 10
   ]
 ) assert(result==expected,result) echo(result=result);
+
+//**** fl_list_transform() ****************************************************
+
+let(
+  list    = [[1,2],[3,4],[5,6]],
+  t       = [1,2],
+  M       = fl_T(t),
+  result  = fl_list_transform(list,M,function(2d) [2d.x,2d.y,0],function(3d) [3d.x,3d.y]),
+  expected = [for(item=list) item+t]
+) assert(result==expected,result);
 "
