Minor changes/fix

--- a/tests/vitamins/pcb_frame-test.conf
+++ b/tests/vitamins/pcb_frame-test.conf
@@ -117,5 +117,5 @@ verbs = fl_verbList([
 pcb   = fl_pcb_select(PCB);
 frame = fl_pcb_Frame(pcb,d=D,faces=FACE_T,wall=WALL,overlap=[WIDE_OVER,THIN_OVER],inclusion=INCLUSION,countersink=COUNTERSINK,layout=LAYOUT);
 
-fl_pcb_frame(verbs,frame,parts=[LEFT,RIGHT],tolerance=TOLERANCE,debug=debug,octant=octant);
+fl_pcb_frame(verbs,frame,parts=[LEFT,RIGHT],tolerance=TOLERANCE,debug=debug,octant=octant,direction=direction);
 "
