Updated to fedora:39, changed entry point for using new make-based tests

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,11 +1,11 @@
-FROM fedora:37
+FROM fedora:39
 LABEL org.opencontainers.image.authors="Giampiero Gabbiani (giampiero@gabbiani.org)"
 
 ARG libs=/root/.local/share/OpenSCAD/libraries
 ARG nop_ver=v21.8.0
 ###############################################################################
 # system pre requisites
-RUN dnf install -y openscad git which
+RUN dnf install -y openscad git which make python3-dotenv python3-termcolor
 ###############################################################################
 # directory structure setup
 RUN mkdir -p ${libs}
@@ -17,6 +17,4 @@ RUN git clone https://github.com/openscad/scad-utils.git
 COPY TOUL.scad .
 ###############################################################################
 # entrypoint
-COPY entry-point.sh /usr/bin/entry-point
-RUN chmod +x /usr/bin/entry-point
-ENTRYPOINT [ "/usr/bin/entry-point" ]
+ENTRYPOINT [ "/usr/bin/make", "-s", "-C", "/import", "tests/runs" ]
