--- a/tests/artifacts/pcb_frame-test.conf
+++ b/tests/artifacts/pcb_frame-test.conf
@@ -5,7 +5,7 @@ TEST_TEMPLATE="template-3d.scad"
 # CAMERA="--camera 0,0,0,0,0,0,7"
 
 TEST_INCLUDES="
-include <../../lib/OFL/vitamins/pcbs.scad>
+include <../../lib/OFL/artifacts/pcb_frame.scad>
 "
 
 # TAB_PARAMETERS="
@@ -28,7 +28,7 @@ TAB_Verbs="
 // adds shapes to scene.
 \$FL_ADD        = \"ON\";   // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // layout of predefined auxiliary shapes (like predefined screws)
-\$FL_ASSEMBLY   = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+\$FL_ASSEMBLY   = \"ON\";   // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // adds local reference axes
 \$FL_AXES       = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // adds a bounding box containing the object
@@ -90,6 +90,8 @@ TOLERANCE=0;  // [0:0.1:1]
 
 /* [TEST] */
 T=2.5;  // [0:0.1:10]
+// when !=[0,0,0], FL_CUTOUT is triggered only on components oriented accordingly to any of the not-null axis values
+CUT_DIRECTION  = [0,0,0];  // [-1:+1]
 "
 
 # TEST_PROLOGUE="
@@ -115,10 +117,11 @@ verbs = fl_verbList([
   FL_SYMBOLS
 ]);
 
-
-
+cut_direction = CUT_DIRECTION==[0,0,0]  ? undef : let(axes=[X,Y,Z]) [for(i=[0:2]) if (CUT_DIRECTION[i]) CUT_DIRECTION[i]*axes[i]];
 pcb   = fl_pcb_select(PCB);
 frame = fl_pcb_Frame(pcb,d=D,faces=FACE_T,wall=WALL,overlap=[WIDE_OVER,THIN_OVER],inclusion=INCLUSION,countersink=COUNTERSINK,layout=LAYOUT);
 
-fl_pcb_frame(verbs,frame,parts=[LEFT,RIGHT],tolerance=TOLERANCE,thick=T,debug=debug,octant=octant,direction=direction);
+fl_pcb_frame(verbs,frame,parts=[LEFT,RIGHT],tolerance=TOLERANCE,thick=T,cut_direction=cut_direction,debug=debug,octant=octant,direction=direction)
+  translate(-Z(\$hole_depth))
+    fl_cylinder(d=\$hole_d+2,h=T,octant=-\$hole_n);
 "
