--- a/tests/artifacts/pcb_holder-test.conf
+++ b/tests/artifacts/pcb_holder-test.conf
@@ -29,7 +29,7 @@ TAB_Verbs="
 // adds shapes to scene.
 \$FL_ADD       = \"ON\";   // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // layout of predefined auxiliary shapes (like predefined screws)
-\$FL_ASSEMBLY  = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+\$FL_ASSEMBLY  = \"ON\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // adds local reference axes
 \$FL_AXES      = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // adds a bounding box containing the object
@@ -66,13 +66,13 @@ TAB_TEST="
 H_MIN = 4;  // [0.1:0.1:10]
 // knurl nut
 KNUT  = \"none\";  // [none,linear,spiral]
-PCB   = \"Perfboard 80 x 20mm\";  //  [\"HiLetgo SX1308 DC-DC Step up power module\", \"ORICO 4 Ports USB 3.0 Hub 5 Gbps with external power supply port\", \"Perfboard 70 x 50mm\", \"Perfboard 60 x 40mm\", \"Perfboard 70 x 30mm\", \"Perfboard 80 x 20mm\", \"RPI4-MODBP-8GB\", \"Raspberry PI uHAT\", \"KHADAS-SBC-VIM1\"]
+PCB   = \"Perfboard 80 x 20mm\";  //  [\"ORICO 4 Ports USB 3.0 Hub 5 Gbps with external power supply port\", \"Perfboard 70 x 50mm\", \"Perfboard 60 x 40mm\", \"Perfboard 70 x 30mm\", \"Perfboard 80 x 20mm\", \"RPI4-MODBP-8GB\", \"Raspberry PI uHAT\", \"KHADAS-SBC-VIM1\"]
 
 /* [Engine] */
 // no fillet if zero
 FILLET  = .5;  // [0:0.1:5]
 // when true also PCB will be shown during FL_ASSEMBLY
-ASSEMBLY_ALL  = false;
+ASSEMBLY_ALL  = true;
 // thickness on +Z axis
 THICK_POSITIVE = 1.6;      // [0:0.1:10]
 // thickness on -Z axis
