--- a/tests/foundation/2d_grid-test.conf
+++ b/tests/foundation/2d_grid-test.conf
@@ -1,4 +1,5 @@
 TEST_DESCRIPTION="2d grid test"
+TEST_TEMPLATE="template-3d.scad"
 
 TEST_INCLUDES="
 include <../../lib/OFL/foundation/unsafe_defs.scad>
