OpenSCAD parameter changes

--- a/tests/skeleton-2d.conf
+++ b/tests/skeleton-2d.conf
@@ -2,9 +2,9 @@
 
 TEST_TEMPLATE="template-2d.scad"
 
-# CAMERA="--camera 5,4.32,0,0,0,0,33.88"
+# ARG_CAMERA="5,4.32,0,0,0,0,33.88"
 
-PROJECTION="--projection=ortho"
+ARG_PROJECTION="ortho"
 
 # TEST_INCLUDES=""
 
