2d-ellipse test added

--- a/tests/foundation/Makefile
+++ b/tests/foundation/Makefile
@@ -6,9 +6,43 @@
 #
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-T_LIST			= 2d_grid 2d 3d 3d_funcs algo assertions base_geo base_list \
+T_LIST			= 2d 2d-ellipse 2d_grid 3d 3d_funcs algo assertions base_geo base_list \
 base_string bend bend2 connect core-comparison core-symbols fillet hole label \
 layout limits profile square torus trace tube type_trait util
+
+
+#
+# 2d_grid
+# 3d
+# 3d_funcs
+# algo
+# assertions
+# base_geo
+# base_list
+# base_string
+# bend
+# bend2
+# connect
+# core-comparison
+# core-symbols
+# drawio
+# fillet
+# hole
+# label
+# layout
+# limits
+# lists
+# profile
+# square
+# template
+# torus
+# trace
+# tube
+# type_trait
+# util
+
+
+
 SOURCES			= $(foreach t,$(T_LIST),$(t)-test.scad)
 RESULTS			= $(foreach t,$(T_LIST),$(t)-test.echo)
 
