--- a/tests/foundation/2d_grid-test.conf
+++ b/tests/foundation/2d_grid-test.conf
@@ -31,7 +31,9 @@ HOLE_D        = 4.4;
 ROTATION    = 0;    // [0:360]
 "
 
-TEST_PROLOGUE=""
+TEST_PROLOGUE="
+fl_status();
+"
 TEST_CODE="
 sheet_metal = [[0,0],GRID_SIZE];
 // the grid bounding box is equal to the sheet metal one reduced by border size
