Added PROLOGUE_NOGUI for NOGUI tests

--- a/tests/bb-test.conf
+++ b/tests/bb-test.conf
@@ -1,6 +1,11 @@
 TEST_DESCRIPTION="Bounding block arithmetic test"
 TEST_TEMPLATE="template-nogui.scad"
-TEST_INCLUDES=""
+
+TEST_PROLOGUE="$PROLOGUE_NOGUI"
+
+TEST_INCLUDES="
+include <../lib/OFL/foundation/core.scad>
+"
 
 TAB_PARAMETERS=""
 TAB_Placement=""
