--- a/tests/defaults.conf
+++ b/tests/defaults.conf
@@ -27,6 +27,10 @@ debug       = fl_parm_Debug(SHOW_LABELS,SHOW_SYMBOLS);
 fl_status();
 "
 
+PROLOGUE_NOGUI="
+fl_status();
+"
+
 TEST_TEMPLATE="template-3d.scad"
 TEST_PROLOGUE="$PROLOGUE_3D"
 
