--- a/tests/foundation/base_string-test.conf
+++ b/tests/foundation/base_string-test.conf
@@ -1,5 +1,6 @@
 TEST_DESCRIPTION="Base string test"
 TEST_TEMPLATE="template-nogui.scad"
+TEST_PROLOGUE="$PROLOGUE_NOGUI"
 TEST_INCLUDES="
 include <../../lib/OFL/foundation/core.scad>
 "
