--- a/tests/foundation/limits-test.conf
+++ b/tests/foundation/limits-test.conf
@@ -1,6 +1,7 @@
 TEST_DESCRIPTION="Foundation test for 3d printing limits"
 
 TEST_TEMPLATE="template-nogui.scad"
+TEST_PROLOGUE="$PROLOGUE_NOGUI"
 
 TEST_INCLUDES="
 include <../../lib/OFL/foundation/limits.scad>
