--- a/tests/foundation/trace-test.conf
+++ b/tests/foundation/trace-test.conf
@@ -1,6 +1,7 @@
 TEST_DESCRIPTION="Trace test"
 
 TEST_TEMPLATE="template-nogui.scad"
+TEST_PROLOGUE="$PROLOGUE_NOGUI"
 
 TEST_INCLUDES="
 include <../../lib/OFL/foundation/core.scad>
