--- a/tests/skeleton-nogui.conf
+++ b/tests/skeleton-nogui.conf
@@ -1,6 +1,18 @@
+#
+# Base for writing NOGUI configurations
+#
+# This file is part of the 'OpenSCAD Foundation Library' (OFL) project.
+#
+# Copyright © 2021, Giampiero Gabbiani <giampiero@gabbiani.org>
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
+#
+
 # TEST_DESCRIPTION=""
 
 TEST_TEMPLATE="template-nogui.scad"
+
+TEST_PROLOGUE="$PROLOGUE_NOGUI"
 
 # TEST_INCLUDES=""
 
