--- a/tests/foundation/3d_funcs-test.conf
+++ b/tests/foundation/3d_funcs-test.conf
@@ -1,14 +1,10 @@
 TEST_DESCRIPTION="Various 3d functions tests"
 TEST_TEMPLATE="template-nogui.scad"
+TEST_PROLOGUE="$PROLOGUE_NOGUI"
 TEST_INCLUDES="
 include <../../lib/OFL/foundation/unsafe_defs.scad>
 use <../../lib/OFL/foundation/3d-engine.scad>
 "
-
-TAB_PARAMETERS=""
-TAB_Placement=""
-TAB_Verbs=""
-TAB_TEST=""
 
 TEST_CODE="
 /******************************************************************************
