--- a/tests/foundation/type_trait-test.conf
+++ b/tests/foundation/type_trait-test.conf
@@ -1,6 +1,7 @@
 TEST_DESCRIPTION="Type traits test file"
 
 TEST_TEMPLATE="template-nogui.scad"
+TEST_PROLOGUE="$PROLOGUE_NOGUI"
 
 TEST_INCLUDES="
 include <../../lib/OFL/foundation/type_trait.scad>
