--- a/tests/foundation/Makefile
+++ b/tests/foundation/Makefile
@@ -8,30 +8,8 @@
 
 T_LIST			= 2d 2d-ellipse 2d_grid 3d 3d_funcs algo assertions base_geo base_list \
 base_string bend bend2 connect core-comparison core-symbols fillet hole label \
-layout limits profile square torus trace tube type_trait util
+layout limits lists profile square torus trace tube type_trait util
 
-
-#
-# 2d_grid
-# 3d
-# 3d_funcs
-# algo
-# assertions
-# base_geo
-# base_list
-# base_string
-# bend
-# bend2
-# connect
-# core-comparison
-# core-symbols
-# drawio
-# fillet
-# hole
-# label
-# layout
-# limits
-# lists
 # profile
 # square
 # template
