--- a/tests/vitamins/pcb_frame-test.conf
+++ b/tests/vitamins/pcb_frame-test.conf
@@ -5,7 +5,7 @@ TEST_TEMPLATE="template-3d.scad"
 # CAMERA="--camera 0,0,0,0,0,0,7"
 
 TEST_INCLUDES="
-include <../../lib/OFL/artifacts/pcb_frame.scad>
+include <../../lib/OFL/vitamins/pcbs.scad>
 "
 
 # TAB_PARAMETERS="
