--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,9 +22,9 @@ jobs:
     - name: Project checkout
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       uses: actions/checkout@v3
-      # with:
-      #   # Number of commits to fetch. 0 indicates all history for all branches and tags (default 1).
-      #   fetch-depth: '0'
+      with:
+        # Number of commits to fetch. 0 indicates all history for all branches and tags (default 1).
+        fetch-depth: '0'
     # - name: Checkout submodules
     #   run: git submodule update --init --recursive
 
@@ -38,8 +38,7 @@ jobs:
 
     - name: make sources and documentation
       run: |
-        echo $PWD && ls -al
-        echo $GITHUB_WORKSPACE && ls -al $GITHUB_WORKSPACE
+        make
 
     # - name: Performs tests
     #   working-directory: ${{github.workspace}}/build
