--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,6 +38,9 @@ jobs:
 
     - name: make sources and documentation
       run: |
+        python -m venv .venv
+        pip install --upgrade pip
+        pip install -r pyres.txt
         make
 
     # - name: Performs tests
