--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,7 +40,7 @@ jobs:
       run: |
         python -m venv .venv
         pip install --upgrade pip
-        pip install -r pyres.txt
+        pip install -r pyreqs.txt
         make
 
     # - name: Performs tests
