--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,6 +39,7 @@ jobs:
     - name: make sources and documentation
       run: |
         python -m venv .venv
+        source .venv/bin/activate
         pip install --upgrade pip
         pip install -r pyreqs.txt
         make
